environments/dev/infracost_test.tf
provider "aws" {
  region                      = "ap-south-1"
  
  access_key                  = ${{ secrets.AWS_ACCESS_KEY_ID }}
  secret_key                  = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
}

resource "aws_instance" "my_web_app" {
  ami           = "ami-02b8269d5e85954ef"

  instance_type = "m3.xlarge" # <<<<<<<<<< Try changing this to m5.xlarge to compare the costs

  tags = {
    Environment = "production"
    Service     = "web-app"
  }

  root_block_device {
    volume_size = 1000 # <<<<<<<<<< Try adding volume_type="gp3" to compare costs
  }
}

resource "aws_lambda_function" "my_hello_world" {
  runtime       = "nodejs12.x"
  handler       = "exports.test"
  image_uri     = "test"
  function_name = "test"
  role          = "arn:aws:ec2:us-east-1:123123123123:instance/i-1231231231"

  memory_size = 512
  tags = {
    Environment = "Prod"
  }
}
